Removed debug statements

--- a/hiragana/index.html
+++ b/hiragana/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html> 
     <head>
-        <title>Usagi-Chan's Drag-and-Drop</title>
+        <title>Usagi-Chan's Hiragana Drag-and-Drop</title>
         <meta name = "viewport" content = "width = device-width, initial-scale = 1.0, maximum-scale = 1.0, minimum-scale = 1.0, user-scalable = 0, minimal-ui" />
         <style type = "text/css">
             body{
