Added katakana folder

--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 </head>
 <body>
 <p><a href="hiragana/">Hiragana Drag-n-Drop</a></p>
+<p><a href="katakana/">Katakana Drag-n-Drop</a></p>
 </body>
 </html>
